Fixing sidebar not getting blurry or translucent

--- a/Arc 2.0/Chrome CSS/general.css
+++ b/Arc 2.0/Chrome CSS/general.css
@@ -61,7 +61,7 @@
       }
   
       .browserSidebarContainer {
-        border-radius: 0px !important;
+/*         border-radius: 0px !important; */
         box-shadow: none !important;
       }
     }
